# tdd_exercise

./: CMakeLists.txt  buildhelper.sh  setenv.sh
Application/: main.cpp
converter/src/: CMakeLists.txt  converter.cpp  converter.h
converter/test/: tests.cpp
